charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverse-proxy-service
spec:
  selector:
    app: reverse-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
